fix layout break to mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ body a {
 
 .container {
     width: 100%;
+    min-width: 320px;
     background-color: var(--clr-black);
     font-family: var(--ff-secondary);
 }
@@ -73,7 +74,7 @@ header {
 
 /* Header Brand */
 .header__brand {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-family: var(--ff-primary);
     font-weight: 100;
 }
@@ -90,7 +91,7 @@ header {
 
 /* --- Nav bar --- */
 .nav__menu {
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-family: var(--ff-primary);
     font-weight: 300;
     display: flex;
@@ -181,7 +182,7 @@ header {
 }
 
 .menu__link {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: var(--ff-secondary);
 }
 
@@ -205,7 +206,7 @@ header {
 }
 
 .menu__footer a {
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .email {
@@ -228,7 +229,7 @@ header {
 }
 
 .social-icon img {
-    width: 25px;
+    width: 20px;
 }
 
 
@@ -243,24 +244,26 @@ header {
     display: flex;
     align-items: center;
     padding: 5%;
+    transition: all 1s linear;
 }
 
 .banner {
     height: 50%;
 }
 
+.banner_title span {
+    font-size: 3rem;
+}
+
 .banner_title {
-    font-size: 5rem;
+    font-size: 3.2rem;
     font-weight: 900;
     line-height: 90%;
 }
 
-.banner_title span {
-    font-size: 4.5rem;
-}
 
 .banner_list {
-    width: 50%;
+    width: 65%;
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
@@ -281,19 +284,16 @@ about-me
 */
 
 .about {
-    padding: 10% 3% 0;
+    padding: 5% 3% 0%;
 }
 
 .about__item {
-    padding: 15px;
-    font-size: 1.2rem;
+    padding: 0px 15px 30px;
     font-weight: 300;
     line-height: 1.5rem;
-    margin-bottom: 20px;
-    
 }
 .about__item h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 400;
 }
 
@@ -324,8 +324,6 @@ about-me
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 80vh;
-    
 }
 
 .skills__item {
@@ -333,27 +331,24 @@ about-me
 }
 
 .skills__item img {
-    width: 50px;
+    width: 40px;
 }
 
 .skills__item ul{
-    margin-top: 20px;
-    list-style-type:square;
+    list-style-type: disc;
 }
-.skills__item ul li{
-    margin-bottom: 10px;
-}
+
 
 /* --- skills slider --- */
 
 .slider-container {
     width: 100%;
+    display: block;
     position: relative;
     overflow: hidden;
-    min-height: 70vh;
+    height: 65vh;
     display: flex;
-    padding-top: 10px;
-
+    padding-top: 40px;
 }
 
 .slide {
@@ -366,22 +361,24 @@ about-me
 }
 
 .slide-body{
-    width: 80%;
-    padding: 40px;
-    margin-top: 20px;
+    width: 90%;
+    padding: 25px;
+    margin-top: 10px;
     border-radius: 5px;
     border: 1px solid var(--clr-bviolet);
+    font-size: 0.9rem;
 }
 .slide-body h2{
-    font-size: 1.5em;
+    font-size: 1.3em;
     line-height: 1.1em;
+    margin-bottom: 20px;
 }
 
 
 /* --- Slider Pagination --- */
 
 .slider__pagination-container{
-    width: 70%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
 }
@@ -449,7 +446,7 @@ Projects
 }
 
 .portfolio h2 {
-    font-size: 3rem;
+    font-size: 1.8rem;
 }
 
 .portfolio-content {
